styles/store.css
a.steamdb_link {
	color: #898A8C;
}

a.steamdb_link:hover {
	text-decoration: underline;
}

.steamdb_error_link {
	display: block;
	margin-top: 12px;
}

.game_purchase_action .steamdb_link {
	float: left;
    margin-top: 8px;
}

.btn_steamdb .ico16 {
	background: none;
}

.steamdb_last_update_old {
	color: #f44336 !important;
}

.steamdb_last_update_old:after {
	display: inline-block;
	content: " ⚠️️";
}

.steamdb_stats_logo {
	width: 54px;
	height: 54px;
	float: right;
	opacity: 0.5;
	transition: opacity .1s ease-in-out;
}

.steamdb_stats:hover .steamdb_stats_logo {
	opacity: 1;
}

.steamdb_stats span {
	min-width: 90px;
	margin-right: 5px;
	display: inline-block;
}

.steamdb_stats b {
	color: #67c1f5;
}

.steamdb_stats p:last-child {
	margin-bottom: 0;
}

.glance_ctn .release_date + .steamdb_last_update {
	margin-top: -13px;
	padding-bottom: 13px;
}

.steamdb_last_update a {
	display: block;
}

.steamdb_prices {
	background-color: rgba( 0, 0, 0, 0.2 );
    margin-bottom: 20px;
	line-height: 3;
	font-family: "Motiva Sans", sans-serif;
	display: block;
}

.steamdb_prices img {
	width: 16px;
	height: 16px;
	padding-left: 17px;
    padding-right: 13px;
	vertical-align: middle;
}

.steamdb_prices a {
	color: #c6d4df;
}

.steamdb_prices b {
	font-weight: bold;
	color: #a3cf06;
}

#error_display .steamdb_registerkey_lineitem {
	margin-top: 20px;
}

.steamdb_registerkey_lineitem img {
	width: 16px;
	height: 16px;
	margin-right: 5px;
	vertical-align: text-top;
}

.steamdb_rating.steamdb_rating_good {
	color: #6c3;
}

.steamdb_rating.steamdb_rating_average {
	color: #fc3;
}

.steamdb_rating.steamdb_rating_poor {
	color: #e60;
}

.steamdb_rating.steamdb_rating_white {
	color: #aaa;
}

.steamdb_rating a {
	color: #556772 !important;
}

.steamdb_rating a:hover {
	color: #fff !important;
}

/**
 * Fix for very long game names not overflowing correctly
 */
.apphub_AppName {
	word-wrap: break-word;
}

/**
 * Fix date not fitting after we insert subid links
 */
.account_table th {
	min-width: 100px;
}

